# easy-dll-gui

./: CMakeLists.txt  README.md  json.h  main.cpp
src/glStaff/: glStaff.cpp  glStaff.h
src/guiStaff/: guiStaff.cpp  guiStaff.h
